--- a/cassandra-chart/templates/cassandra-statefulset.yaml
+++ b/cassandra-chart/templates/cassandra-statefulset.yaml
@@ -25,3 +25,18 @@ spec:
           limits:
             memory: "{{ .Values.cassandra.memoryLimit }}"
             cpu: "{{ .Values.cassandra.cpuLimit }}"
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: cassandra
+spec:
+  selector:
+    app: cassandra
+  ports:
+  - protocol: TCP
+    port: 9042
+    targetPort: 9042
+  clusterIP: None
